<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ippocrate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pazienti">I miei pazienti</string>
    <string name="title_activity_cartella_clinica">Cartella clinica</string>
    <string name="titoloAnamnesi"><u>Anamnesi</u></string>
    <string name="titoloReferti"><u>Referti medici</u></string>
    <string name="title_activity_referto_medico">Referto medico</string>
    <string name="titoloTipoDiVisita"><u>Tipo di visita</u></string>
    <string name="titoloDataVisita"><u>Data visita</u></string>
    <string name="titoloMedico"><u>Medico</u></string>
    <string name="titoloDiagnosi"><u>Diagnosi</u></string>
    <string name="titoloMultimedia"><u>Multimedia</u></string>
    <string name="titoloPrescrizioniMediche"><u>Prescrizioni mediche</u></string>
    <string name="title_activity_immagine_full_screen">ImmagineFullScreen</string>
    <string name="immagineReferto">Immagine referto</string>

</resources>